# secvault

./: .gitignore  README.md
docs/: notes.md
docs/api/: swagger.yaml
src/backend/api/: .gitignore  Makefile  README.md
src/backend/api/src/: go.mod  go.sum  main.go
src/backend/api/src/internal/app/: app.go
src/backend/api/src/internal/models/: model.go
src/backend/api/src/internal/transport/grpc/: rpc_client.go
src/backend/api/src/internal/transport/rest/: handlers.go
src/backend/business-logic/: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
src/backend/business-logic/src/: main.cc
src/backend/business-logic/src/common/: crypto.h  errors.h  logger.h  sys.h  types.h
src/backend/business-logic/src/core/: token.cc  token.h
src/backend/business-logic/src/core/server/: bl_server.cc  bl_server.h  grpc_server.cc  grpc_server.h  secret_management_service.cc  secret_management_service.h
src/backend/business-logic/src/database/: pg_connection.cc  pg_connection.h  pg_pool.cc  pg_pool.h
src/backend/proto/: secret_management.proto
src/docker/: Makefile  api.Dockerfile  docker-compose.yml  swagger.Dockerfile
src/frontend/: README.md
src/frontend/secvault-svelte/: index.html  package-lock.json  package.json
src/frontend/secvault-svelte/src/: App.svelte  app.css
